--- a/index.html
+++ b/index.html
@@ -3,103 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
- 
-
+  <title>AI Web Generator</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="">
-  <h1>Welcome to AI web Generator</h1>
-  <label for="Enter a username"> </label>
-  <input type="text" name="" id="inputs"  placeholder="Enter a prompt"> 
-  <button id="btn" onclick=getUser()>Get User</button>
-  <div id="result">
 
+<body class="bg-green-200 text-black flex flex-col items-center min-h-screen p-6">
+  <h1 class="text-3xl font-bold mb-6 text-center">Welcome to AI Web Generator</h1>
+
+  <div class="flex flex-col items-center w-full max-w-md bg-white p-6 rounded-lg shadow-lg">
+    <input type="text" id="inputs" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-400" placeholder="Enter a prompt">
+
+    <button id="btn" class="mt-4 px-6 py-2 bg-yellow-400 hover:bg-yellow-500 text-black font-semibold rounded-lg shadow-md transition duration-200">
+      Get User
+    </button>
   </div>
-  
-</body>
-<script >
-  
-const input = document.getElementById("inputs");
-const output = document.getElementById("result");
 
-const getUser = async () => {
-  try {
-    const prompt = input.value.trim();
-    let username = null;
+  <div id="result" class="mt-6 w-full flex justify-center text-lg font-semibold">
+    <!-- Results will be displayed here -->
+  </div>
 
-    const match = prompt.match(/(\w+)(?=\s+in|$)/i);
-    if (match) {
-      username = match[1];
-    } else if (!/\s/.test(prompt)) {
-      username = prompt;
-    }
+  <script>
+    const input = document.getElementById("inputs");
+    const output = document.getElementById("result");
+    const button = document.getElementById("btn");
 
-    if (!username) {
-      output.innerHTML = "No username found in the prompt.";
-      return;
-    }
+    const getUser = async () => {
+      try {
+        const prompt = input.value.trim();
+        let username = null;
 
-    console.log(username);
+        const match = prompt.match(/(\w+)(?=\s+in|$)/i);
+        if (match) {
+          username = match[1];
+        } else if (!/\s/.test(prompt)) {
+          username = prompt;
+        }
 
-    const response = await fetch(
-      "https://api.groq.com/openai/v1/chat/completions",
-      {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          Authorization:
-            "Bearer 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",
-        },
-        body: JSON.stringify({
-          model: "llama-3.3-70b-versatile",
-          messages: [
-            {
-              role: "system",
-              content:
-                "You are an AI that generates only functional HTML and JavaScript code, which can be inserted into a <div id='result'></div>. Ensure all scripts execute properly.",
-            },
-            {
-              role: "user",
-              content: input.value + `https://api.github.com/users/${username}`,
-            },
-          ],
-        }),
+        if (!username) {
+          output.innerHTML = "No username found in the prompt.";
+          return;
+        }
+
+        console.log(username);
+
+        const response = await fetch("https://api.groq.com/openai/v1/chat/completions", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            Authorization: "Bearer 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",
+          },
+          body: JSON.stringify({
+            model: "llama-3.3-70b-versatile",
+            messages: [
+              {
+                role: "system",
+                content: "You are an AI that generates only functional HTML and JavaScript code, which can be inserted into a <div id='result'></div>. Ensure all scripts execute properly.",
+              },
+              {
+                role: "user",
+                content: input.value + ` https://api.github.com/users/${username}`,
+              },
+            ],
+          }),
+        });
+
+        const data = await response.json();
+        console.log(data);
+
+        if (data.choices && data.choices.length > 0) {
+          output.innerHTML = data.choices[0].message.content;
+          executeScripts(output);
+          input.value = "";
+        } else {
+          output.innerHTML = "Error: Unexpected response format.";
+        }
+      } catch (error) {
+        console.log("Error", error);
+        output.innerHTML = "Error: " + error.message;
       }
-    );
+    };
 
-    const data = await response.json();
-    console.log(data);
+    function executeScripts(element) {
+      const scripts = element.getElementsByTagName("script");
 
-    if (data.choices && data.choices.length > 0) {
-      output.innerHTML = data.choices[0].message.content;
-      executeScripts(output);
-    } else {
-      output.innerHTML = "Error: Unexpected response format.";
+      for (let i = 0; i < scripts.length; i++) {
+        const newScript = document.createElement("script");
+        if (scripts[i].src) {
+          newScript.src = scripts[i].src;
+          newScript.onload = () => console.log(`Loaded: ${scripts[i].src}`);
+          document.body.appendChild(newScript);
+        } else {
+          newScript.textContent = scripts[i].textContent;
+          document.body.appendChild(newScript);
+        }
+      }
     }
 
-    // const newdata = data.choices[0].message.content;
-    // executeScripts(output);
-  } catch (Error) {
-    console.log("Error", Error);
-    output.innerHTML = "Error: " + Error.message;
-  }
-};
+    // Attach click event listener AFTER defining `getUser`
+    button.addEventListener("click", getUser);
+  </script>
 
-function executeScripts(element) {
-  const scripts = element.getElementsByTagName("script");
-
-  for (let i = 0; i < scripts.length; i++) {
-    const newScript = document.createElement("script");
-    if (scripts[i].src) {
-      newScript.src = scripts[i].src;
-      newScript.onload = () => console.log(`Loaded: ${scripts[i].src}`);
-      document.body.appendChild(newScript);
-    } else {
-      newScript.textContent = scripts[i].textContent;
-      document.body.appendChild(newScript);
-    }
-  }
-}
-
-</script>
+</body>
 </html>
